# my_timetable_project

backend/: .dockerignore  .gitignore  Dockerfile  compositor.py  main.py  palette_extractor_copy.py  pyproject.toml  timetable_renderer.py
frontend/: README.md  index.html  package-lock.json  package.json  wrangler.toml
frontend/src/: App.css  App.jsx
